<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.example.zz7.hiragana.MainActivity"
    tools:showIn="@layout/activity_main">


    <RadioGroup
        android:id="@+id/rg_tab_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"
        android:background="@color/hi_white"
        android:orientation="horizontal">

        <RadioButton
            android:id="@+id/rb_1"
            android:text="@string/rb_1"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"/>

        <RadioButton
            android:id="@+id/rb_2"
            android:text="@string/rb_2"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"/>

        <RadioButton
            android:id="@+id/rb_3"
            android:text="@string/rb_3"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"/>

        <RadioButton
            android:id="@+id/rb_4"
            android:text="@string/rb_4"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"/>

    </RadioGroup>

    <View
        android:id="@+id/div_tab_bar"
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:layout_above="@id/rg_tab_bar"
        android:background="@color/hi_white" />

    <android.support.v4.view.ViewPager
        android:id="@+id/vpager"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@id/div_tab_bar"
        android:layout_below="@id/rg_tab_bar" />

</RelativeLayout>
