<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    tools:context=".PracticeActivity">

    <android.support.v7.widget.Toolbar
        android:id="@+id/p_toolbar"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:background="@color/pink"
        android:elevation="10dp"
        android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light"/>


    <RadioGroup
        android:id="@+id/rg"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:orientation="horizontal"
        android:layout_below="@id/my_toolbar">

        <!--    android:background="@drawable/radiobuttonbg"
         style="@style/RadioButtonStyle"-->

        <RadioButton
            android:id="@+id/rb_1"
            style="@style/radiobutton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="onRadioButtonClicked"
            android:text="@string/rb_1" />

        <RadioButton
            android:id="@+id/rb_2"
            style="@style/radiobutton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="onRadioButtonClicked"
            android:text="@string/rb_2" />

        <RadioButton
            android:id="@+id/rb_3"
            style="@style/radiobutton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="onRadioButtonClicked"
            android:text="@string/rb_3" />

        <RadioButton
            android:id="@+id/rb_4"
            style="@style/radiobutton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="onRadioButtonClicked"
            android:text="@string/rb_4" />
    </RadioGroup>

    <android.support.v4.view.ViewPager xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/pager"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/rg" />

    <ToggleButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="New ToggleButton"
        android:id="@+id/toggleButton"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true" />
    <!-- android:background="@color/pink"-->


</RelativeLayout>